--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Shuffle!</title>
-    <link rel="stylesheet" href="style.css?v=2023-12-27-a">
+    <link rel="stylesheet" href="style.css?v=2023-12-30">
 </head>
 <body>
     <!-- The Modal -->
@@ -32,7 +32,7 @@
         <input type="checkbox" id="disable-hints">
         <label class="toggle-ios" for="disable-hints"></label>
     </div>
-    <script type="module" src="script.js?v=2023-12-27"></script>
+    <script type="module" src="script.js?v=2023-12-30"></script>
 </body>
 </html>
 
