--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Shuffle!</title>
-    <link rel="stylesheet" href="style.css?v=2023-12-30">
+    <link rel="stylesheet" href="style.css?v=2023-12-31">
 </head>
 <body>
     <!-- The Modal -->
     <div id="startModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
-            <div class="instructions">Find the mystery word by rearranging the letters as fast as you can.</div>
+            <div class="modal-header">How To Play</div>
+            <div class="instructions">There are two possible words that can be made using all the letter tiles. You're given the first word. Find the second word by rearranging the letter tiles as fast as you can!</div>
             <button id="start-button">Start</button>
         </div>
     </div>
@@ -32,7 +33,7 @@
         <input type="checkbox" id="disable-hints">
         <label class="toggle-ios" for="disable-hints"></label>
     </div>
-    <script type="module" src="script.js?v=2023-12-30"></script>
+    <script type="module" src="script.js?v=2023-12-31"></script>
 </body>
 </html>
 
