--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
+    />
+    <title>Shuffle!</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./img/favicon_180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./img/favicon_192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/favicon_32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./img/favicon_16x16.png"
     />
     <meta
       http-equiv="Cache-Control"
@@ -12,8 +36,7 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>Shuffle!</title>
-    <link rel="stylesheet" href="style.css?v=2024-01-03" />
+    <link rel="stylesheet" href="style.css?v=2024-01-05a" />
   </head>
   <body>
     <script
@@ -51,6 +74,6 @@
       <input type="checkbox" id="disable-hints" />
       <label class="toggle-ios" for="disable-hints"></label>
     </div>
-    <script type="module" src="script.js?v=2024-01-03"></script>
+    <script type="module" src="script.js?v=2024-01-05a"></script>
   </body>
 </html>
