--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
-    <title>Shuffle!</title>
+    <title>Shuffle - A daily anagram puzzle</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -36,7 +36,7 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="stylesheet" href="style.css?v=2024-01-05a" />
+    <link rel="stylesheet" href="main.c9579cd7.css" />
   </head>
   <body>
     <script
@@ -55,9 +55,12 @@
       <div class="modal-content">
         <div class="modal-header">How To Play</div>
         <div class="instructions">
-          There are two possible words that can be made using all the letter
-          tiles. You're given the first word. Find the second word by
-          rearranging the letter tiles as fast as you can!
+          <p>
+            There are two possible words that can be made using all of the
+            letter tiles. You're given the first word. Find the second word by
+            rearranging the letter tiles as fast as you can!
+          </p>
+          <p>A new puzzle is released daily at 12 a.m. ET.</p>
         </div>
         <button id="start-button">Start</button>
       </div>
@@ -74,6 +77,6 @@
       <input type="checkbox" id="disable-hints" />
       <label class="toggle-ios" for="disable-hints"></label>
     </div>
-    <script type="module" src="script.js?v=2024-01-05a"></script>
+    <script type="module" src="main.c9579cd7.js"></script>
   </body>
 </html>
